# Resistor-Reader

./: .gitignore  2_CMakeLists copy.txt  CMakeLists.txt  ORI_main copy.cpp  README.md  cluster.cpp  cluster.h  color.cpp  color.h  led_driver.cpp  led_driver.h  line.cpp  line.h  main.cpp  resistor_value.cpp  resistor_value.h  take_photo.cpp  take_photo.h
toolchains/: rpi-zero.cmake
